--- a/MVC_App/Views/Home/test.cshtml
+++ b/MVC_App/Views/Home/test.cshtml
@@ -16,7 +16,7 @@
         <tr>
             <td>@item.prodId</td>
             <td>@item.prodName</td>
-            <td>@item.quantity + "in no's"</td>
+            <td>@item.quantity + in no's</td>
         </tr>
     }
 
